# life-insurance-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
knowledge_base/: README.md
knowledge_base/benefits/: cash_value.yaml  death_benefit.yaml  riders.yaml  tax_benefits.yaml
knowledge_base/claims/: claim_status.yaml  filing_process.yaml  required_documents.yaml
knowledge_base/eligibility/: age_requirements.yaml  health_factors.yaml  underwriting.yaml
knowledge_base/faq/: general.yaml  policy_changes.yaml  premium_payments.yaml
knowledge_base/policies/: term_life.yaml  universal_life.yaml  variable_life.yaml  whole_life.yaml
src/: __init__.py  config.py
src/agents/: __init__.py  claims_agent.py  fallback_agent.py  general_agent.py  graph.py  policy_agent.py  state.py  supervisor.py
src/api/: __init__.py  app.py  models.py
src/api/routes/: __init__.py  chat.py  health.py  knowledge.py
src/cli/: __init__.py  chat.py
src/knowledge/: __init__.py  indexer.py  loader.py  retriever.py  schemas.py
src/memory/: __init__.py  mem0_manager.py  session_manager.py
